# Greval

./: .gitignore  .travis.yml  CMakeLists.txt  README  README.md  SConstruct  environment.cpp  environment.hpp  eval_visitor.cpp  eval_visitor.hpp  expr.cpp  flake.nix  greval-config.cmake.in  lexer.cpp  lexer.hpp  lexer_test.cpp  parser.cpp  parser.hpp  print_visitor.cpp  print_visitor.hpp  syntax_tree.cpp  syntax_tree.hpp  test.sh  token.cpp  token.hpp  value.cpp  value.hpp  visitor.hpp
extra/: cmd_eval.cpp  cmd_expr.cpp  cmd_lexer.cpp
include/expr/: environment.hpp  eval_visitor.hpp  lexer.hpp  parser.hpp  print_visitor.hpp  syntax_tree.hpp  token.hpp  value.hpp  visitor.hpp
include/greval/: environment.hpp  eval_visitor.hpp  lexer.hpp  parser.hpp  print_visitor.hpp  syntax_tree.hpp  token.hpp  value.hpp  visitor.hpp
src/: environment.cpp  environment.hpp  eval_visitor.cpp  eval_visitor.hpp  expr.cpp  lexer.cpp  lexer.hpp  lexer_test.cpp  parser.cpp  parser.hpp  print_visitor.cpp  print_visitor.hpp  syntax_tree.cpp  syntax_tree.hpp  token.cpp  token.hpp  value.cpp  value.hpp  visitor.hpp
test/: expr_test.cpp
